# boe-converter

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.kiro/specs/bill-of-entry-converter/: .config.kiro  design.md  requirements.md  tasks.md
.streamlit/: config.toml  secrets.toml.example
boe_converter/: calculator.py  excel_reader.py  excel_writer.py  invoice_parser.py  models.py  old_format_parser.py  orchestrator.py  parser.py  tally_exporter.py  tally_master.py  tally_store.py  validator.py
boe_converter/templates/: ctn_template.xlsx
boe_converter/web/: app.py
tests/: conftest.py  test_be_fixes.py  test_e2e_integration.py  test_excel_formulas.py  test_excel_labels_golden.py  test_excel_overflow.py  test_header_extraction.py  test_invoice_cartons.py  test_lineitem_extraction.py  test_models.py  test_old_format.py  test_orchestrator_budget.py  test_orientation_regression.py  test_prop_atomic_failure.py  test_prop_capture_roundtrip.py  test_prop_compute_line.py  test_prop_empty_cells.py  test_prop_invoice_total.py  test_prop_item_count.py  test_prop_lineitem_completeness.py  test_prop_missing_inputs.py  test_prop_multipage_merge.py  test_prop_pcs_rule.py  test_prop_recompute.py  test_prop_srno_sequence.py  test_prop_structure_labels.py  test_prop_summary.py  test_prop_totals.py  test_prop_unparseable_retention.py  test_prop_value_placement.py  test_tally_export.py  test_tally_store.py  test_validator_rejections.py
