[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boe-converter"
version = "0.1.0"
description = "Convert an Indian Customs Bill of Entry (BOE) PDF into the CTN-layout Excel workbook."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[tool.setuptools.packages.find]
include = ["boe_converter*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra"

# Hypothesis profiles are registered in tests/conftest.py.
# Default profile uses max_examples=100; select another with
#   pytest --hypothesis-profile=ci
